--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 mkdir -p dist
 echo "build src/proxise.ls -> dist/proxise.js ..."
-./node_modules/.bin/lsc -cbp src/proxise.ls > dist/proxise.js
+./node_modules/.bin/lsc -cp --no-header src/proxise.ls > dist/proxise.js
 echo "minifying proxise.js ..."
-./node_modules/.bin/uglifyjs dist/proxise.js > dist/proxise.min.js
+./node_modules/.bin/uglifyjs dist/proxise.js -m -c > dist/proxise.min.js
 echo "done."
