- make it work with nodejs  - rename `proxise.js` to `index.js` but keep the deprecated    `proxise.js`.  - bump version

--- a/build
+++ b/build
@@ -1,7 +1,9 @@
 #!/usr/bin/env bash
 mkdir -p dist
-echo "build src/proxise.ls -> dist/proxise.js ..."
-./node_modules/.bin/lsc -cp --no-header src/proxise.ls > dist/proxise.js
-echo "minifying proxise.js ..."
-./node_modules/.bin/uglifyjs dist/proxise.js -m -c > dist/proxise.min.js
+echo "build src/index.ls -> dist/index.js ..."
+./node_modules/.bin/lsc -cp --no-header src/index.ls > dist/index.js
+echo "minifying index.js ..."
+./node_modules/.bin/uglifyjs dist/index.js -m -c > dist/index.min.js
+cp dist/index.js dist/proxise.js
+cp dist/index.min.js dist/proxise.min.js
 echo "done."
