--- a/build
+++ b/build
@@ -1,9 +1,8 @@
 #!/usr/bin/env bash
+rm -rf dist
 mkdir -p dist
 echo "build src/index.ls -> dist/index.js ..."
 ./node_modules/.bin/lsc -cp --no-header src/index.ls > dist/index.js
 echo "minifying index.js ..."
 ./node_modules/.bin/uglifyjs dist/index.js -m -c > dist/index.min.js
-cp dist/index.js dist/proxise.js
-cp dist/index.min.js dist/proxise.min.js
 echo "done."
