--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist/**/*"
   ],
   "description": "Proxy for Promise",
-  "version": "0.1.6",
+  "version": "1.0.0",
   "homepage": "https://github.com/loadingio/proxise",
   "repository": {
     "type": "git",
@@ -20,6 +20,6 @@
   },
   "devDependencies": {
     "livescript": ">=1.6.0",
-    "uglify-js": "=3.2.0"
+    "uglify-js": "^3.13.1"
   }
 }
